--- a/templates/home-assistant-docker-compose.yml.j2
+++ b/templates/home-assistant-docker-compose.yml.j2
@@ -18,7 +18,7 @@ services:
       - ./config:/config
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - TZ=America/Los_Angeles
+      - TZ={{ timezone }} 
     restart: unless-stopped
     privileged: true
     ports:
