--- a/templates/tailscale.yml.j2
+++ b/templates/tailscale.yml.j2
@@ -1,9 +1,9 @@
- tailscale-{{ name }}:
+ {{ name }}-tailscale:
   image: tailscale/tailscale:latest
-  container_name: tailscale-{{ name }}
+  container_name: {{ name }}-tailscale
   hostname: {{ name }}
   volumes:
-   - ~/tailscale/{{ name }}_state:/var/lib/tailscale
+   - {{ tailscale_dir }}/{{ name }}_state:/var/lib/tailscale
    - /dev/net/tun:/dev/net/tun
   cap_add:
    - net_admin
