--- a/templates/tailscale.yml.j2
+++ b/templates/tailscale.yml.j2
@@ -3,7 +3,7 @@
   container_name: {{ name }}-tailscale
   hostname: {{ name }}
   volumes:
-   - {{ tailscale_dir }}/{{ name }}_state:/var/lib/tailscale
+   - ./tailscale_state:/var/lib/tailscale
    - /dev/net/tun:/dev/net/tun
   cap_add:
    - net_admin
