--- a/templates/jellyfin-docker-compose.yml.j2
+++ b/templates/jellyfin-docker-compose.yml.j2
@@ -1,16 +1,15 @@
 # {{ ansible_managed }}
 ---
-
 services:
 {% if tailscale_enable and ts_authkey %}
-{% with name='jellyfin' %}
+{% with name=name %}
 {% include 'tailscale.yml.j2'%}
 {% endwith %}
 {% endif %}
 
- jellyfin:
+ {{ name }}:
     image: lscr.io/linuxserver/jellyfin:latest
-    container_name: jellyfin
+    container_name: {{ name }}
     volumes:
       - ./config:/config
       - {{ music_dir }}:/data/music
@@ -23,6 +22,6 @@ services:
     restart: unless-stopped
 {% if tailscale_enable and ts_authkey %}
     depends_on: 
-      - jellyfin-tailscale
-    network_mode: service:jellyfin-tailscale
+      - {{ name }}-tailscale
+    network_mode: service:{{ name }}-tailscale
 {% endif %}
